--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node_modules/.bin/electron .",
+    "webpack": "webpack -w",
     "build": "node build.js"
   },
   "repository": {
@@ -18,7 +19,15 @@
   },
   "homepage": "https://github.com/yuuho/task-log#readme",
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
     "electron-packager": "^5.2.1",
-    "electron-prebuilt": "^0.36.7"
+    "electron-prebuilt": "^0.36.7",
+    "webpack": "^1.12.13"
+  },
+  "dependencies": {
+    "jquery": "^2.2.0"
   }
 }
